--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,28 +28,16 @@ dist.jar=${dist.dir}/001_Books_Analyzer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=H:\\Jar files\\AbsoluteLayout.jar
-file.reference.activation-1.1.1.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\activation-1.1.1.jar
-file.reference.commons-codec-1.13.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\commons-codec-1.13.jar
-file.reference.commons-collections4-4.4.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\commons-collections4-4.4.jar
-file.reference.commons-compress-1.19.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\commons-compress-1.19.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\commons-logging-1.2.jar
-file.reference.commons-math3-3.6.1.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\commons-math3-3.6.1.jar
-file.reference.curvesapi-1.06.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\ooxml-lib\\curvesapi-1.06.jar
-file.reference.jaxb-api-2.3.1.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\jaxb-api-2.3.1.jar
-file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\jaxb-core-2.3.0.1.jar
-file.reference.jaxb-impl-2.3.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\jaxb-impl-2.3.2.jar
+file.reference.commons-collections4-4.1.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\commons-collections4-4.1.jar
 file.reference.jcalendar-1.4.jar=H:\\Jar files\\jcalendar-1.4.jar
-file.reference.log4j-1.2.17.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-8.0.15.jar=H:\\Jar files\\mysql-connector-java-8.0.15.jar
-file.reference.poi-4.1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\poi-4.1.2.jar
-file.reference.poi-4.1.2.jar-1=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\poi-4.1.2.jar
-file.reference.poi-excelant-4.1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\poi-excelant-4.1.2.jar
-file.reference.poi-ooxml-4.1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\poi-ooxml-4.1.2.jar
-file.reference.poi-ooxml-schemas-4.1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\poi-ooxml-schemas-4.1.2.jar
-file.reference.poi-scratchpad-4.1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\poi-scratchpad-4.1.2.jar
+file.reference.poi-3.17.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\poi-3.17.jar
+file.reference.poi-4.1.2.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\poi-4.1.2.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\poi-ooxml-schemas-3.17.jar
 file.reference.rs2xml.jar=H:\\Jar files\\rs2xml.jar
-file.reference.SparseBitSet-1.2.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\lib\\SparseBitSet-1.2.jar
 file.reference.sqlite-jdbc-3.7.2.jar=H:\\Jar files\\sqlite-jdbc-3.7.2.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Kashif Alei\\Desktop\\xlsx jars\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-3.1.0.jar=C:\\Users\\Kashif Alei\\Downloads\\Compressed\\poi-4.1.2\\ooxml-lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
@@ -59,25 +47,13 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-4.1.2.jar}:\
-    ${file.reference.poi-4.1.2.jar-1}:\
-    ${file.reference.poi-excelant-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
-    ${file.reference.poi-scratchpad-4.1.2.jar}:\
-    ${file.reference.SparseBitSet-1.2.jar}:\
-    ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.commons-codec-1.13.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-compress-1.19.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-core-2.3.0.1.jar}:\
-    ${file.reference.jaxb-impl-2.3.2.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.curvesapi-1.06.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
